modelfit = 'lsst/modelfit/'
parameters = modelfit + 'parameters/'
headers = [
    modelfit + 'parameters.h',
    parameters + 'limits.h',
    parameters + 'object.h',
    parameters + 'parameter.h',
    parameters + 'transform.h',
    parameters + 'type_name.h',
    parameters + 'unit.h',
]

install_headers(
    headers,
    preserve_path : true,
)
